--- a/CienciasDown/app/src/main/AndroidManifest.xml
+++ b/CienciasDown/app/src/main/AndroidManifest.xml
@@ -4,15 +4,43 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/icone"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".View.MainActivity" >
+            android:name=".View.MainActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".View.AguaActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".View.CadastroActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait" />
+        <activity android:name=".View.HistoricoActivity" />
+        <activity
+            android:name=".View.CicloAguaActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".View.ConsumoAguaActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".View.PoluicaoAguaActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".View.AlunosActivity"
+            android:label="@string/title_activity_alunos" >
         </activity>
     </application>
 
