--- a/CienciasDown/app/src/main/AndroidManifest.xml
+++ b/CienciasDown/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="br.edu.ifspsaocarlos.sdm.cienciasdown" >
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/icone"
@@ -41,6 +43,10 @@
         <activity
             android:name=".View.AlunosActivity"
             android:label="@string/title_activity_alunos" >
+        </activity>
+        <activity
+            android:name=".View.EvaporacaoActivity"
+            android:label="@string/title_activity_evaporacao" >
         </activity>
     </application>
 
