--- a/CienciasDown/app/build.gradle
+++ b/CienciasDown/app/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "21.1.2"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.2"
 
     defaultConfig {
         applicationId "br.edu.ifspsaocarlos.sdm.cienciasdown"
@@ -19,9 +19,22 @@ android {
     }
 }
 
+repositories {
+    /*maven{ url 'https://dl.bintray.com/sj/maven/' }*/
+    maven {
+        url "https://jitpack.io"
+    }
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.0.0'
+    testCompile 'junit:junit:4.12'
+    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:design:23.1.1'
+    compile 'com.github.PhilJay:MPAndroidChart:v2.0.9'
+    //compile 'com.numetriclabz.numandroidcharts:numandroidcharts:1.0.12'
+    //compile 'com.android.support:appcompat-v7:22.0.0'
     //compile 'com.jjoe64:graphview:4.0.1'
-    compile files('libs/GraphView-4.0.1.jar')
+    //compile files('libs/GraphView-4.0.1.jar')
+
 }
