--- a/CienciasDown/app/src/main/AndroidManifest.xml
+++ b/CienciasDown/app/src/main/AndroidManifest.xml
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="br.edu.ifspsaocarlos.sdm.cienciasdown">
+    package="br.edu.ifspsaocarlos.sdm.cienciasdown" >
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/icone"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme" >
         <activity
             android:name=".View.MainActivity"
             android:configChanges="orientation"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -43,34 +42,12 @@
             android:screenOrientation="landscape" />
         <activity
             android:name=".View.AlunosActivity"
-            android:label="@string/title_activity_alunos" />
+            android:label="@string/title_activity_alunos" >
+        </activity>
         <activity
             android:name=".View.EvaporacaoActivity"
-            android:label="@string/title_activity_evaporacao" />
-        <activity
-            android:name=".View.CondensacaoActivity"
-            android:label="@string/title_activity_condensacao"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".View.PrecipitacaoActivity"
-            android:label="@string/title_activity_precipitacao"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".View.EvaporacaoOfflineActivity"
-            android:label="@string/title_activity_evaporacao_offline"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".View.VideoTeste"
-            android:label="@string/title_activity_video_teste"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".View.CondensacaoOfflineActivity"
-            android:label="@string/title_activity_condensacao_offline"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".View.PrecipitacaoOfflineActivity"
-            android:label="@string/title_activity_precipitacao_offline"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:label="@string/title_activity_evaporacao" >
+        </activity>
     </application>
 
 </manifest>
